# malloc

./: CMakeLists.txt  CNAME  Makefile  a.out  author  main  main.c  res  ress  test  test2  test3  testMy
include/: malloc.h
src/: .show_alloc_mem..swp  .show_alloc_mem.c.swp  .show_mem_bonuses..swp  block_creation.c  block_operations.c  calloc.c  free.c  ft_bzero.c  ft_memset.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  helpers.c  malloc.c  realloc.c  reallocf.c  show_alloc_mem.c  show_mem_bonuses.c  zone_creation.c  zone_operations.c  zone_release.c
